app/assets/stylesheets/components/_tag_pills.scss
.tags {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  align-items: center;
  gap: 8px;

  p {
    margin: 0;
  }
}

.tag-pill {
  display: inline-block;
  border-radius: 20px;
  text-decoration: none;
  background-color: #EFF4FF;
  border: none;
  color: hsl(223, 71%, 49%);
  padding: 10px 20px;
  text-align: center;
}

.tag-pill:hover {
  background-color: hsl(223, 71%, 49%);
  color: #EFF4FF;
}

.tag-pill-active {
  display: inline-block;
  background-color: hsl(223, 71%, 49%);
  color: #EFF4FF;
  border-radius: 20px;
  text-decoration: none;
  border: none;
  padding: 10px 20px;
  text-align: center;
  margin-right: 13px;
  margin-left: -1px;
  margin-bottom: 10px;
  border-radius: 100px;
}

